--- a/Wiki-TroubleshootReading/README.me
+++ b/Wiki-TroubleshootReading/README.me
@@ -1,1 +1,3 @@
-erer
+# History of Turmoil
+
+* The last turmoil between 2023-08 and 2023-10 were caused by a failed OS SSD. You can use Lenovo Vantage to check disk health
